<resources>
    <string name="app_name">Flibusta test</string>
    <string name="is_ebook_title">E-Ink theme</string>
    <string name="test_flibusta_is_up">Check flibusta is up</string>
    <string name="force_start">Force start</string>
    <string name="use_hardware_acceleration_title">Use hardware acceleration</string>
    <string name="start_connection_test_btn">Start connection test</string>
    <string name="disable_tor_message">Looks like you use VPN connection. Disable inner TOR client for more performance?</string>
    <string name="vpn_use">Using VPN</string>
    <string name="view_preferences">View preferences</string>
    <string name="load_by_pages_title">Load by pages</string>
    <string name="load_all_results_title">Load all results</string>
    <string name="opds_preferences_category">OPDS preferences</string>
    <string name="global_view_preferences_title">Global preferences</string>
    <string name="routine_app_view_title">Standard mode</string>
    <string name="e_ink_app_view_title">Background and animation hidden</string>
    <string name="hide_search_result_buttons_pref">Hide buttons in search results</string>
    <string name="night_view_mode_title">Night mode</string>
    <string name="buttons_in_results_displayed_title">Buttons displays in search results</string>
    <string name="buttons_in_results_hidden_title">Buttons hidden in search results</string>
    <string name="enable_filters_pref">Enable filtering</string>
    <string name="filtration_enabled_title">Filtration enabled</string>
    <string name="filtration_disabled_title">Filtration disabled</string>
    <string name="only_russian_pref">Only russian</string>
    <string name="only_russian_enabled_title">Shown only books translated on russian</string>
    <string name="only_russian_disabled_title">Shown books on all languages</string>
    <string name="hide_read_pref">Hide read</string>
    <string name="hide_read_enabled_title">Read books hidden</string>
    <string name="hide_read_disabled_title">Read books displayed</string>
    <string name="hide_download_pref">Hide downloaded</string>
    <string name="hide_download_enabled_title">Downloaded books hidden</string>
    <string name="hide_download_disabled_title">Downloaded books displays</string>
    <string name="hide_digests_pref">Hide digests</string>
    <string name="hide_digests_disabled_title">Digests displayed</string>
    <string name="hide_digests_enabled_title">Books with more than 3 authors are hidden</string>
    <string name="use_rules_filters_pref">Use filter rules</string>
    <string name="use_rules_filters_enabled_title">Filter rules used</string>
    <string name="use_rules_filters_disabled_title">Do not use filter rules</string>
    <string name="filter_by_book_name_pref">Filter by book name</string>
    <string name="strict_book_name_filter">Strict book name filtering</string>
    <string name="filter_book_author_pref">Filter by book author</string>
    <string name="strict_book_author_filter">Strict book author filtering</string>
    <string name="pattern_book_author_filter">Filter by pattern in book author</string>
    <string name="pattern_book_name_filter">Filter by pattern in book name</string>
    <string name="filter_book_genre_pref">Filter by book genre</string>
    <string name="filter_book_sequence_pref">Filter by book sequence</string>
    <string name="strict_book_genre_filter">Strict book genre filtering</string>
    <string name="pattern_book_genre_filter">Filter by pattern in book genre</string>
    <string name="strict_book_sequence_filter">Strict book sequence filtering</string>
    <string name="pattern_book_sequence_filter">Filter by pattern in book sequence</string>
    <string name="authors_strict_filter_pref">Authors filter</string>
    <string name="genres_strict_filter_pref">Genres filter</string>
    <string name="sequences_strict_filter_pref">Sequences filter</string>
    <string name="add_filter_on_long_click_pref">Add filter by long click</string>
    <string name="show_filter_statistics_pref">Show filter statistics</string>
    <string name="filter_statistics_hidden_title">Show filter statistics in opds mode</string>
    <string name="filter_statistics_display_title">Filter statistics hidden</string>
    <string name="long_click_to_add_filter_disabled_title">Off</string>
    <string name="long_click_to_add_filter_enabled_title">Long press on author, genre or sequence for add to filter list</string>
    <string name="sequence_title">Sequence</string>
    <string name="title_change_download_folder">Download dir</string>
    <string name="download_path_settings">Download path settings</string>
    <string name="dir_structure_category">Dir structure</string>
    <string name="file_name_title">File name</string>
    <string name="only_favorite_mime_title">Only selected format</string>
    <string name="book_load_notification_displayed_title">Progress book download notification will be load</string>
    <string name="book_load_notification_hidden">No progress book notification</string>
    <string name="show_book_load_progress_pref">Book load progress</string>
    <string name="sequence_in_book_name_disabled_title">Sequence will not append to a book name</string>
    <string name="author_name_disabled_title">Author name will not append to a book name</string>
    <string name="author_name_enabled_title">Author name appends to book name</string>
    <string name="author_name_title">Author</string>
    <string name="sequence_dirs_pref">Sequence folders</string>
    <string name="different_dirs_pref">Different folders</string>
    <string name="sequences_in_author_dir_pref">Sequences in author dir</string>
    <string name="sequences_in_author_dirs_enabled">Sequences will be load to author folder</string>
    <string name="different_dirs_create_disabled">Authors and sequences folders will be load directly to downloads folder</string>
    <string name="different_dirs_create_enabled">Create different folders to authors and sequences</string>
    <string name="sequence_dirs_create_enabled">For every sequence will be created a new folders</string>
    <string name="sequence_dirs_create_disabled">Different folders for sequence is not create</string>
    <string name="author_dirs_pref">Author folders</string>
    <string name="author_dirs_create_enabled">For every author will be created a new folders</string>
    <string name="author_dirs_create_disabled">Different folders for author is not create</string>
    <string name="books_autoload_pref">Books auto-download</string>
    <string name="books_autoload_enabled_title">Books will be load immediately</string>
    <string name="books_autoload_disabled_title">Books appends in queue for download, in \"schedule\" category in side menu</string>
    <string name="sequences_in_author_dir_disabled">Wil be created a difference folder for sequences in root of download folder</string>
    <string name="sequence_in_book_name_enabled_title">Sequence will be append to book name</string>
    <string name="download_preferences">Download preferences</string>
    <string name="navigation_schedule_list_title">Schedule list</string>
    <string name="navigation_schedule_statement_title">Statement</string>
    <string name="show_book_covers_title">Show book covers</string>
    <string name="book_covers_displayed_title">Covers displayed</string>
    <string name="book_covers_hidden_title">Covers hidden</string>
    <string name="navigation_schedule_errors_list_title">Unsuccessful</string>
    <string name="show_download_state_title">Show download state</string>
    <string name="unzip_loaded_title">Unzip loaded</string>
    <string name="no_unzip_title">Books loaded as is</string>
    <string name="unzip_title">Unzip loaded books. Warning! Possible errors then many files was in archive!</string>
    <string name="filter_preferences">Filter preferences</string>
    <string name="show_filter_title">Show filter</string>
    <string name="opds_preferences">Catalog preferences</string>
    <string name="opds_history_pref">Catalog history</string>
    <string name="opds_history_enabled_title">History enabled. All loaded results will be store on memory. Warning: may be hard for devices with low RAM</string>
    <string name="opds_history_disabled_title">Catalog history not saved, saving only history links</string>
    <string name="show_covers_by_request_title">Show covers by request</string>
    <string name="book_covers_shown_by_request_title">Show covers by click on cover</string>
    <string name="book_covers_shown_automatically_title">Book covers shows automatically</string>
    <string name="show_sort_title">Sort</string>
    <string name="show_add_bookmark_title">Add bookmark</string>
    <string name="cache_preferences">Cache preferences</string>
    <string name="clear_cache_now_title">Clear cache now</string>
    <string name="max_cache_size_title">Maximum cache size</string>
    <string name="auto_clear_cache_title">Cache auto clear</string>
    <string name="cache_clear_off_title">Cache don\'t clear automatically</string>
    <string name="cache_auto_clear_on_title">Cache will be clear automatically</string>
    <string name="reserve_preferences_title">Reserve and restore settings</string>
    <string name="send_to_kindle_title">Send to kindle</string>
    <string name="send_to_kindle_enabled_title">Automatically send loaded books in .mobi to Kindle app</string>
    <string name="no_send_to_kindle_title">Disable</string>
    <string name="connection_preferences">Connection preferences</string>
    <string name="skip_load_screen_message">Skip load screen</string>
    <string name="normally_load_app_title">Normally load app</string>
    <string name="skip_load_screen_summary">Skip app load screen</string>
    <string name="custom_mirror_pref_title">Custom mirror</string>
    <string name="custom_mirror_hint">Put custom mirror here</string>
    <string name="default_server_url_use_title">Use default library URL</string>
    <string name="custom_url_use_title">Use URL below this</string>
    <string name="testing_preferences">Test preferences</string>
    <string name="update_preferences">Update preferences</string>
    <string name="update_on_start_disabled">Do not check update on start</string>
    <string name="update_on_start_enabled">Check update on start enabled</string>
    <string name="check_update_on_start_pref">Check update on start</string>
    <string name="check_update_now_pref">Check update now</string>
    <string name="show_beta_updates_list_pref">Show beta releases list</string>
    <string name="show_beta_updates_list_title">Show list of all beta update releases</string>
    <string name="show_updates_list_title">Show stable releases list</string>
    <string name="show_updates_list_pref">Show list of all stable releases</string>
    <string name="show_connection_options_message">Switch connection hint</string>
    <string name="show_connection_options_disabled_title">Do not offer switch connection type on start</string>
    <string name="show_connection_options_enabled_title">On start- offer change connection type when VPN or TOR connection active</string>
    <string name="item_hidden_title">Item hidden</string>
    <string name="item_displayed_title">Item displayed</string>
    <string name="filtered_elements_title">Filtered stats</string>
    <string name="download_state_title">"Download state "</string>
    <string name="toolbar_theme_title">Theme switcher</string>
    <string name="toolbar_eink_title">E-ink theme switcher</string>
    <string name="toolbar_bookmark_title">Bookmark</string>
    <string name="toolbar_view_config_title">View config</string>
    <string name="toolbar_search_in_list_title">Search in list</string>
    <string name="toolbar_sort_title">Sort button</string>
    <string name="toolbar_visibility_options_title">Toolbar visibility options</string>
</resources>