<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/global_view_preferences_title">
        <SwitchPreferenceCompat
            app:key="is eInk"
            android:defaultValue="false"
            android:summary="@string/e_ink_app_view_title"
            android:summaryOff="@string/routine_app_view_title"
            android:title="@string/is_ebook_title" />
    </PreferenceCategory>
        <DropDownPreference
            app:key="night theme"
            android:entries="@array/night_theme_entries"
            android:defaultValue="system"
            app:useSimpleSummaryProvider="true"
            android:entryValues="@array/night_theme_entry_values"
            android:title="@string/night_view_mode_title" />
    <PreferenceCategory
        android:title="@string/opds_preferences_category"
        >
        <SwitchPreferenceCompat
            app:key="opds show paging"
            android:defaultValue="true"
            android:summary="@string/load_by_pages_title"
            android:summaryOff="@string/load_all_results_title"
            android:title="@string/load_by_pages_title" />
        <SwitchPreferenceCompat
            app:key="show covers"
            android:defaultValue="true"
            android:summary="@string/book_covers_displayed_title"
            android:summaryOff="@string/book_covers_hidden_title"
            android:title="@string/show_book_covers_title" />
        <SwitchPreferenceCompat
            app:key="show covers by request"
            android:defaultValue="true"
            android:dependency="show covers"
            android:summary="@string/book_covers_shown_by_request_title"
            android:summaryOff="@string/book_covers_shown_automatically_title"
            android:title="@string/show_covers_by_request_title" />
        <SwitchPreferenceCompat
            app:key="no item buttons"
            android:defaultValue="false"
            android:summary="@string/buttons_in_results_hidden_title"
            android:summaryOff="@string/buttons_in_results_displayed_title"
            android:title="@string/hide_search_result_buttons_pref" />
    </PreferenceCategory>

</PreferenceScreen>