<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:summaryOff="@string/normally_load_app_title"
        android:summaryOn="@string/skip_load_screen_summary"
        android:title="@string/skip_load_screen_message"
        app:key="skip load screen" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:summaryOff="@string/show_connection_options_disabled_title"
        android:summaryOn="@string/show_connection_options_enabled_title"
        android:title="@string/show_connection_options_message"
        app:key="offer connection switch" />

    <DropDownPreference
        app:key="connect mode"
        android:entries="@array/connection_options_entries"
        android:defaultValue="Tor"
        app:useSimpleSummaryProvider="true"
        android:entryValues="@array/connection_options_values"
        android:title="@string/select_connection_type_title" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:summaryOff="@string/default_server_url_use_title"
        android:summaryOn="@string/custom_url_use_title"
        android:title="@string/custom_mirror_pref_title"
        app:key="use custom mirror" />
    <EditTextPreference
        android:summary="@string/custom_mirror_hint"
        android:title="@string/set_custom_mirror_title"
        app:key="custom flibusta mirror" />

    <Preference
        android:title="@string/setup_bridges_title"
        app:key="setup bridges" />
</PreferenceScreen>