<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:summary="@string/opds_history_enabled_title"
        android:summaryOff="@string/opds_history_disabled_title"
        android:title="@string/opds_history_pref"
        app:key="enable opds history" />

    <PreferenceCategory android:title="@string/toolbar_visibility_options_title">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show toolbar search"
            android:summaryOff="@string/item_hidden_title"
            android:summaryOn="@string/item_displayed_title"
            android:title="@string/toolbar_search_in_list_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show toolbar sort"
            android:summaryOff="@string/item_hidden_title"
            android:summaryOn="@string/item_displayed_title"
            android:title="@string/toolbar_sort_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show toolbar blocked"
            android:summaryOff="@string/item_hidden_title"
            android:summaryOn="@string/item_displayed_title"
            android:title="@string/filtered_elements_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show toolbar download state"
            android:summaryOff="@string/item_hidden_title"
            android:summaryOn="@string/item_displayed_title"
            android:title="@string/download_state_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show toolbar theme"
            android:summaryOff="@string/item_hidden_title"
            android:summaryOn="@string/item_displayed_title"
            android:title="@string/toolbar_theme_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show toolbar eink"
            android:summaryOff="@string/item_hidden_title"
            android:summaryOn="@string/item_displayed_title"
            android:title="@string/toolbar_eink_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show toolbar bookmark"
            android:summaryOff="@string/item_hidden_title"
            android:summaryOn="@string/item_displayed_title"
            android:title="@string/toolbar_bookmark_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show toolbar view config"
            android:summaryOff="@string/item_hidden_title"
            android:summaryOn="@string/item_displayed_title"
            android:title="@string/toolbar_view_config_title" />
    </PreferenceCategory>
</PreferenceScreen>