<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:title="@string/opds_preferences"
        app:icon="@drawable/ic_baseline_view_list_24"
        app:fragment="net.veldor.flibusta_test.ui.PreferencesActivity$OpdsPreferencesFragment"/>
    <Preference
        app:title="@string/view_preferences"
        app:icon="@drawable/ic_baseline_eye_24"
        app:fragment="net.veldor.flibusta_test.ui.PreferencesActivity$ViewPreferencesFragment"/>
    <Preference
        app:title="@string/download_preferences"
        app:icon="@drawable/ic_cloud_download_black_24dp"
        app:fragment="net.veldor.flibusta_test.ui.browser_fragments.DownloadPreferencesFragment"/>
    <Preference
        app:title="@string/filter_preferences"
        app:icon="@drawable/ic_baseline_filter_alt_24"
        app:fragment="net.veldor.flibusta_test.ui.filter_fragments.FilterPrefsFragment"/>

    <Preference
        app:title="@string/cache_preferences"
        app:icon="@drawable/ic_baseline_sd_storage_24"
        app:fragment="net.veldor.flibusta_test.ui.PreferencesActivity$CachePreferencesFragment"/>

    <Preference
        app:title="@string/reserve_preferences_title"
        app:icon="@drawable/ic_baseline_settings_backup_restore_24"
        app:fragment="net.veldor.flibusta_test.ui.PreferencesActivity$ReservePreferencesFragment"/>

    <Preference
        app:title="@string/connection_preferences"
        app:icon="@drawable/ic_baseline_perm_data_setting_24"
        app:fragment="net.veldor.flibusta_test.ui.PreferencesActivity$ConnectionPreferencesFragment"/>

    <Preference
        app:title="@string/testing_preferences"
        app:icon="@drawable/ic_test_black_24"
        app:fragment="net.veldor.flibusta_test.ui.PreferencesActivity$TestPreferencesFragment"/>
    <Preference
        app:title="@string/update_preferences"
        app:icon="@drawable/ic_baseline_system_update_24"
        app:fragment="net.veldor.flibusta_test.ui.PreferencesActivity$UpdatePreferencesFragment"/>


</PreferenceScreen>