<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filter_navigation"
    app:startDestination="@+id/navigation_schedule_list">

    <fragment
        android:id="@+id/navigation_schedule_list"
        android:name="net.veldor.flibusta_test.view.download_fragments.DownloadScheduleListFragment"
        android:label="@string/navigation_schedule_list_title" />
    <fragment
        android:id="@+id/navigation_schedule_errors_list"
        android:name="net.veldor.flibusta_test.view.download_fragments.DownloadScheduleListErrorsFragment"
        android:label="@string/navigation_schedule_errors_list_title" />

    <fragment
        android:id="@+id/navigation_schedule_statement"
        android:name="net.veldor.flibusta_test.view.download_fragments.DownloadScheduleStatementFragment"
        android:label="@string/navigation_schedule_statement_title" />
</navigation>